--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-[![Sourav Dey's Blog Cards](https://github-cards-external-blogs.souravdey777.vercel.app/getMediumBlogs?username=fiquick&type=horizontal&limit=2)](https://medium.com/@fiquick)
+[![Sourav Dey's Blog Cards](https://github-cards-external-blogs.souravdey777.vercel.app/getMediumBlogs?username=ffionquick&type=horizontal&limit=2)](https://medium.com/@ffionquick)
