--- a/README
+++ b/README
@@ -1,1 +1,14 @@
-[![fiquick's github stats](https://github-readme-stats.vercel.app/api?username=fiquick&show_icons=true&theme=default)](https://github.com/fiquick/)
+### Hi there 👋
+
+I'm Fi, a content designer 💻🍲🥡
+
+I have a passion for words and technology
+
+My current side project is learning Python so I can experiment with AI language models 
+
+[LinkedIn 💼](https://www.linkedin.com/in/fi-quick-0975685a/)
+
+[Website 🌍](https://docs.google.com/presentation/d/15tPYvBOtXyquzU8JhUcg2wasxEZq-4DK5GbaicSFCII/edit#slide=id.g16450139556_0_332)
+
+[Email 📬](mailto:fiquicktech@gmail.com)
+
