--- a/README
+++ b/README
@@ -8,7 +8,9 @@ My current side project is learning Python so I can experiment with AI language 
 
 [LinkedIn 💼](https://www.linkedin.com/in/fi-quick-0975685a/)
 
-[Website 🌍](https://docs.google.com/presentation/d/15tPYvBOtXyquzU8JhUcg2wasxEZq-4DK5GbaicSFCII/edit#slide=id.g16450139556_0_332)
+[Medium 🐦](https://medium.com/@quickandlively)
+
+[Portfolio 🌍](https://docs.google.com/presentation/d/15tPYvBOtXyquzU8JhUcg2wasxEZq-4DK5GbaicSFCII/edit#slide=id.g16450139556_0_332)
 
 [Email 📬](mailto:fiquicktech@gmail.com)
 
